# swww-vulkan

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md
.specify/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
client/: Cargo.toml
client/src/: cli.rs  daemon.rs  ipc.rs  main.rs  random.rs  upscale.rs
common/: Cargo.toml
common/src/: cache.rs  duration_parse.rs  image_decode.rs  ipc_types.rs  lib.rs  scan.rs
daemon/src/: main.rs  output.rs  render.rs  transition.rs  wayland.rs
daemon/src/vulkan/: pipeline.rs  shaders.rs  (+1 more)
shaders/: transition_blinds.frag  transition_book_flip.frag  transition_bounce.frag  transition_circle_crop.frag  transition_cross_zoom.frag  transition_cube.frag  transition_diamond.frag  transition_dissolve.frag  transition_doom.frag  transition_doorway.frag  transition_dreamy.frag  transition_fade.frag  transition_film_burn.frag  transition_glitch_memories.frag  transition_grid_flip.frag  transition_grow.frag  transition_hexagonalize.frag  transition_kaleidoscope.frag  transition_morph.frag  transition_outer.frag  transition_pinwheel.frag  transition_pixelate.frag  transition_polka_dots.frag  transition_radial.frag  transition_ripple.frag  transition_rolls.frag  transition_squeeze.frag  transition_swap.frag  transition_swirl.frag  transition_water_drop.frag  transition_wave.frag  transition_wind.frag  transition_window_blinds.frag  transition_wipe.frag  wallpaper.frag  wallpaper.vert
specs/7-random-wallpaper/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+2 files in other folders)
